toolchain/internal/core/analysis/testdata/errors/enums/int_enum_missing_value.vdl
// @expect: E302

enum Priority {
  Low = 1
  Medium
}
